[gd_scene load_steps=9 format=3 uid="uid://ttj00f0efscf4"]

[ext_resource type="Script" uid="uid://4cz3tya11lx43" path="res://algorithms/wavefunctions/noirsequencer/noir_sequencer.gd" id="1_vgk3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7h8j1"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7rxy"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmg7v"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoqx0"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncbph"]
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1c4j"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_3v2lj"]
default_font_size = 16
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.45, 0.45, 0.45, 1)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/styles/disabled = SubResource("StyleBoxFlat_7h8j1")
Button/styles/focus = SubResource("StyleBoxFlat_c7rxy")
Button/styles/hover = SubResource("StyleBoxFlat_xmg7v")
Button/styles/normal = SubResource("StyleBoxFlat_uoqx0")
Button/styles/pressed = SubResource("StyleBoxFlat_ncbph")
Label/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Panel/styles/panel = SubResource("StyleBoxFlat_e1c4j")

[node name="NoirSequencer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3v2lj")
script = ExtResource("1_vgk3v")

[node name="StatusPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 790.0
offset_bottom = 50.0

[node name="StatusLabel" type="Label" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Click 'Initialize Audio' to start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlPanel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 790.0
offset_bottom = 100.0
theme_override_constants/separation = 10

[node name="InitAudioButton" type="Button" parent="ControlPanel"]
layout_mode = 2
text = "Initialize Audio"

[node name="PlayButton" type="Button" parent="ControlPanel"]
layout_mode = 2
disabled = true
text = "Play"

[node name="TestSoundButton" type="Button" parent="ControlPanel"]
layout_mode = 2
disabled = true
text = "Test Sound"

[node name="VBoxContainer" type="VBoxContainer" parent="ControlPanel"]
layout_mode = 2

[node name="BPMLabel" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "90"
horizontal_alignment = 1

[node name="BPMSlider" type="HSlider" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
min_value = 60.0
max_value = 150.0
value = 90.0

[node name="ClearButton" type="Button" parent="ControlPanel"]
layout_mode = 2
text = "Clear"

[node name="RandomButton" type="Button" parent="ControlPanel"]
layout_mode = 2
text = "Random"

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 110.0
offset_right = 790.0
offset_bottom = 560.0
